fixing some alignment issues

--- a/css/wiki_specific.css
+++ b/css/wiki_specific.css
@@ -3,7 +3,7 @@
 div#main article > h1 { display: none; }
 
 input.calc_input {
-
+	margin: 0;
 }
 
 div.calculator ul {
@@ -66,7 +66,7 @@ div#entry_info {
   z-index: 10;
   margin-right: 170px;
   padding-top: 8px;
-  width: 400px;
+  width: 350px;
   height: 50px;
 }
 
